--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
     <!--footer Section -->
      <div  class="for-full-back "  id="footer" >
 
-         <div id="footer-sidebar-one"><span class-"footer-bold;">Seattle Office</span><br/>80 Yesler Way, Suite 200<br/>Seattle, Washington 98104<br/>Phone:206.467.0054
+         <div id="footer-sidebar-one"><span style="font-weight:bold;">Seattle Office</span><br/>80 Yesler Way, Suite 200<br/>Seattle, Washington 98104<br/>Phone:206.467.0054
          </div>
          <div id="footer-sidebar-two"><span style="font-weight:bold;">Connecticut Office</span><br/>353 Christian Street, Unit 13<br/>Oxford, Connecticut 06478<br/>Phone: 203.262.9245
          </div>
