--- a/profile/colin_murphy.html
+++ b/profile/colin_murphy.html
@@ -40,13 +40,13 @@
             <a href="../index.html#about">ABOUT</a>
           </li>
           <li>
-            <a href="./index.html#team">TEAM</a>
+            <a href="../index.html#team">TEAM</a>
           </li>
           <li>
-            <a href="./index.html#services">SERVICES</a>
+            <a href="../index.html#services">SERVICES</a>
           </li>
           <li>
-            <a href="./index.html#contact">CONTACT</a>
+            <a href="../index.html#contact">CONTACT</a>
           </li>
         </ul>
       </div><!-- /.navbar-collapse -->
