--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         <div class="col-md-5 contact-cls">
           <h3>Contact Us</h3>
           <div>
-            <span><i class="fa fa-home"></i> Address: 80 Yesler Way #200 Seattle, WA 98104</span><br>
+            <span><i class="fa fa-home"></i> Address: 80 Yesler Way #200 <br/>&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;Seattle, WA 98104</span><br>
             <span><i class="fa fa-phone"></i> Phone:206.467.0054</span><br>
             <span><i class="fa fa-envelope-o"></i>E-Mail: hello@trinityerd.com</span><br>
           </div><br>
