opacity and adding color to colins page

--- a/profile/colin_murphy.html
+++ b/profile/colin_murphy.html
@@ -57,7 +57,7 @@
     <div class="container">
       <div class="row text-center">
         <div class="col-md-8 col-md-offset-2">
-          <h1>Colin Murphy, RRC. FRCI, LEED AP BD+C, PRA</h1>
+          <h1 style="color:#108445;">Colin Murphy, RRC. FRCI, LEED AP BD+C, PRA</h1>
           <h2>Principal</h2>
           <h4><strong>Colin is the principal of Trinity | ERD, which he founded in 1986. A Registered Roof Consultant with
           degrees in Mechanical Engineering and Law (Scotland), he has authored and presented numerous
