--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <![endif]-->
   <title>TrinityERD</title><!--REQUIRED STYLE SHEETS-->
   <!-- BOOTSTRAP CORE STYLE CSS -->
+  <link href="../favicon.ico" rel="shortcut icon">
   <link href="assets/css/bootstrap.css" rel="stylesheet"><!-- FONTAWESOME STYLE CSS -->
   <link href="assets/css/font-awesome.min.css" rel="stylesheet"><!-- VEGAS STYLE CSS -->
   <link href="assets/scripts/vegas/jquery.vegas.min.css" rel="stylesheet"><!-- CUSTOM STYLE CSS -->
@@ -98,7 +99,7 @@
               <img alt="" src="assets/img/darbi_krumpos.jpg">
               <h3><strong>DARBI KRUMPOS</strong><br>
               <br>
-              Vice President/<br>Senior Project Manager </h3></h3>
+              Vice President</h3>
             </div>
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6">
@@ -308,10 +309,16 @@
   <!--footer Section -->
   <div class="for-full-back" id="footer">
     <div id="footer-sidebar-one">
-      <span style="font-weight:bold;">Seattle Office</span><br>
+      <span style="font-weight:bold;">Seattle Headquarters</span><br>
       80 Yesler Way, Suite 200<br>
       Seattle, Washington 98104<br>
       Phone:206.467.0054
+    </div>
+    <div id="footer-sidebar-three">
+      <span style="font-weight:bold;">Honolulu Office</span><br>
+      735 Bishop Street, Suite 430<br>
+      Honolulu, HI 96813<br>
+      Phone: 808.535.3144
     </div>
     <div id="footer-sidebar-two">
       <span style="font-weight:bold;">Connecticut Office</span><br>
@@ -324,12 +331,6 @@
       10 Mauney Court<br>
       Columbia, SC 29201<br>
       Phone: 803.988.8133
-    </div>
-    <div id="footer-sidebar-three">
-      <span style="font-weight:bold;">Honolulu Office</span><br>
-      735 Bishop Street, Suite 430<br>
-      Honolulu, HI 96813<br>
-      Phone: 808.535.3144
     </div>
     <div class="for-full-back footer-copyright">
       © 
