--- a/profile/colin_murphy.html
+++ b/profile/colin_murphy.html
@@ -22,7 +22,10 @@
   <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
+    <![endif]  <link href="./stylesheet.css" rel="stylesheet" type="text/css">
+ 
+    -->
+
 </head>
 <body>
 <!-- Navigation -->
@@ -56,8 +59,9 @@
   <section class="for-full-back color-white" id="about">
     <div class="container">
       <div class="row text-center">
-        <div class="col-md-8 col-md-offset-2">
-          <h1 style="color:#108445;">Colin Murphy, RRC. FRCI, LEED AP BD+C, PRA</h1>
+        <div  class="col-md-1">
+         <!-- 
+         <h1 style="color:#108445;">Colin Murphy, RRC. FRCI, LEED AP BD+C, PRA</h1>
           <h2>Principal</h2>
           <h4><strong>Colin is the principal of Trinity | ERD, which he founded in 1986. A Registered Roof Consultant with
           degrees in Mechanical Engineering and Law (Scotland), he has authored and presented numerous
@@ -71,6 +75,159 @@
           patents for roofing and building envelope components and systems. Colin leads a strong team of
           designers, investigators, project managers, laboratory technicians, field observers, architects and
           engineers, all of whom focus on the exterior envelope of both commercial and residential buildings.</strong></h4>
+          -->
+          <div class="content_container">
+    <div class="content">
+      <div class="content_left content_nine">
+        <!-- Profile Post -->
+        <div class="bio_text">
+          <img alt="Colin Murphy" class="image_left" height="275" src="../assets/img/colin_murphy.jpg" width="275">
+          <h1 style="color:#108445;">Colin Murphy, RRC. FRCI, LEED AP BD+C, PRA</h1>
+          <div class="bio_position">
+            <p style="font-weight: bold; padding-bottom:8px !important; line-height:16px !important;">Principal</p>
+            <p style="padding-bottom:8px !important;  line-height:16px !important;">LEED Accredited Professional in Seattle, Connecticut, &amp; Honolulu</p>
+            <p style="padding-bottom:8px !important;  line-height:16px !important;">Bachelor of Snorkeling, Underwater Basket Weaving, Cum Laude –&nbsp;Hawai'i Pacific University</p>
+          </div>
+        </div>
+        <div class="bio_content">
+          <h4><strong>
+          <p>Colin is the principal of Trinity | ERD, which he founded in 1986. A Registered Roof Consultant with
+          degrees in Mechanical Engineering and Law (Scotland), he has authored and presented numerous
+          papers on roofing and building envelope subjects throughout the United States and Canada. His work
+          includes forensic analysis of building envelopes, design of building envelope systems, and envelope
+          component and system testing. </p>
+          <p>Colin’s certifications include LEED Accredited Professional status
+          from the U.S. Green Building Council, certifications as both a Residential and Commercial Building
+          Inspector from the International Code Council and certification as a Professional Reserve Analyst
+          through the Association of Professional Reserve Analysts. Colin is the co-author of “The Roof
+          Construction Guide for General Contractors”. </p>
+          <p>He also holds fourteen United States and European
+          patents for roofing and building envelope components and systems. Colin leads a strong team of
+          designers, investigators, project managers, laboratory technicians, field observers, architects and
+          engineers, all of whom focus on the exterior envelope of both commercial and residential buildings.</p>
+          </strong></h4>
+        </div><!-- Profile Post -->
+        <div class="bio_link">
+          <a href="http://www.vidaris.com/people">« Back</a>
+        </div>
+      </div>
+      <div class="content_right content_three">
+        <!-- People Menu -->
+        <script>
+        function switch_menu(title_id, menu_id) {
+        var title = document.getElementById(title_id);
+        if(title.className == 'service_sidebar_title_closed') {
+            title.className = 'service_sidebar_title_open';
+            } else {
+            title.className = 'service_sidebar_title_closed';
+        }
+        var menu = document.getElementById(menu_id);
+        if(menu.style.display == 'block') {
+            menu.style.display = 'none';
+            } else {
+            menu.style.display = 'block';
+        }
+        }
+
+        </script>
+        <div class="service_sidebar_title_closed" id="title0" onclick="switch_menu(&#39;title0&#39;,&#39;menu0&#39;)">
+          Seattle
+        </div>
+        <div class="service_sidebar_menu" id="menu0" style="display:none;">
+          <ul>
+            <li>
+              <a href="/profile/aimee_st_cyr.html">Aimee St. Cyr</a>
+            </li>
+            <li>
+              <a href="/profile/alexander_murphy.html">Alexander Murphy</a>
+            </li>
+            <li>
+              <a href="/profile/austin_bowers.html">Austin Bowers</a>
+            </li>
+            <li>
+              <a href="/profile/chris_prochazka.html">Chris Prochazka</a>
+            </li>
+            <li><span class="service_menu_linko">Colin Murphy</span></li> 
+            
+            <li>
+              <a href="/profile/darbi_krumpos.html">Darbi Krumpos</a>
+            </li>
+            <li>
+              <a href="/profile/deonte_randoplh.html">Deonte Randolph</a>
+            </li>
+            <li>
+              <a href="/profile/ellen_tackett.html">Ellen Tackett</a>
+            </li>
+            <li>
+              <a href="/profile/gene_apostol.html">Gene Apostol</a>
+            </li>
+            <li>
+              <a href="/profile/jennifer_stephan.html">Jennifer Stephan</a>
+            </li>
+            <li>
+              <a href="/profile/john_michael_crotty.html">John Michael Crotty</a>
+            </li>
+            <li>
+              <a href="/profile/norah_willet.html">Norah Willett</a>
+            </li>
+            <li>
+              <a href="/profile/patricia_shelby.html">Patricia Shelby</a>
+            </li>
+            <li>
+              <a href="/profile/steve_hess.html">Steve Hess</a>
+            </li>
+            <li>
+              <a href="/profile/tiffany_gould.html">Tiffany Gould</a>
+            </li>
+          </ul>
+        </div>
+        <div class="service_sidebar_title_closed" id="title1" onclick="switch_menu(&#39;title1&#39;,&#39;menu1&#39;)">
+          Honolulu
+        </div>
+        <div class="service_sidebar_menu" id="menu1" style="display:none;">
+          <ul>
+            <li>
+              <a href="/profile/kevin_agliam.html">Kevin Agliam</a>
+            </li>
+            <li>
+              <a href="/profile/jacqueline_fortezzo.html">Jacqueline Fortezzo</a>
+            </li>
+            <li>
+              <a href="/profile/moana_cummings.html">Moana Cummings</a>
+            </li>
+            <li>
+              <a href="/profile/rollin_wakley.html">Rollin Wakely</a>
+            </li>
+            <li>
+              <a href="/profile/shawn_moseley.html">Shawn Moseley</a>
+            </li>
+          </ul>
+        </div>
+        <div class="service_sidebar_title_closed" id="title2" onclick="switch_menu(&#39;title2&#39;,&#39;menu2&#39;)">
+          Connecticut
+        </div>
+        <div class="service_sidebar_menu" id="menu2" style="display:none;">
+          <ul>
+            <li>
+              <a href="/profile/robert_nieminen.html">Robert Nieminen</a>
+            </li>
+          </ul>
+        </div>
+        <div class="service_sidebar_title_closed" id="title3" onclick="switch_menu(&#39;title3&#39;,&#39;menu3&#39;)">
+          South Carolina
+        </div>
+        <div class="service_sidebar_menu" id="menu3" style="display:none;">
+          <ul>
+            <li>
+              <a href="/profile/alex_holtzkamp.html">Alex Holtzkamp</a>
+            </li>
+          </ul>
+        </div>
+          </ul>
+        </div><!-- People Menu -->
+      </div>
+    </div>
+  </div><!-- Social -->
         </div>
       </div>
     </div>
@@ -79,10 +236,16 @@
 <!--Footer Section -->
   <div class="for-full-back" id="footer">
     <div id="footer-sidebar-one">
-      <span style="font-weight:bold;">Seattle Office</span><br>
+      <span style="font-weight:bold;">Seattle Headquarters</span><br>
       80 Yesler Way, Suite 200<br>
       Seattle, Washington 98104<br>
       Phone:206.467.0054
+    </div>
+     <div id="footer-sidebar-three">
+      <span style="font-weight:bold;">Honolulu Office</span><br>
+      735 Bishop Street, Suite 430<br>
+      Honolulu, HI 96813<br>
+      Phone: 808.535.3144
     </div>
     <div id="footer-sidebar-two">
       <span style="font-weight:bold;">Connecticut Office</span><br>
@@ -95,12 +258,6 @@
       10 Mauney Court<br>
       Columbia, SC 29201<br>
       Phone: 803.988.8133
-    </div>
-    <div id="footer-sidebar-three">
-      <span style="font-weight:bold;">Honolulu Office</span><br>
-      735 Bishop Street, Suite 430<br>
-      Honolulu, HI 96813<br>
-      Phone: 808.535.3144
     </div>
     <div class="for-full-back footer-copyright">
       © 
