--- a/profile/colin_murphy.html
+++ b/profile/colin_murphy.html
@@ -108,7 +108,7 @@
           </strong></h4>
         </div><!-- Profile Post -->
         <div class="bio_link">
-          <a href="http://www.vidaris.com/people">« Back</a>
+          <a href="../index.html">« Back</a>
         </div>
       </div>
       <div class="content_right content_three">
@@ -219,7 +219,7 @@
         <div class="service_sidebar_menu" id="menu3" style="display:none;">
           <ul>
             <li>
-              <a href="/profile/alex_holtzkamp.html">Alex Holtzkamp</a>
+              <a href="/profile/alex_holtz.html">Alex Holtzkamp</a>
             </li>
           </ul>
         </div>
