--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+
+    <script
+  src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+  integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
+  crossorigin="anonymous"></script>
+<script type="text/javascript">
+  $(document).ready(function() {
+    $("#seemorestaff").click(function() {
+        $("#slidemore").slideToggle(999);
+    });
+  });
+</script>
+
+
+
 </head>
 <body>
   <!--Header section  -->
@@ -84,6 +99,7 @@
           <h4><strong>Trinity | ERD’s project teams are selected based on their expertise and experience. Our staff include project managers, field inspectors, architects, drafters, and administrative personnel. Trinity | ERD is committed to supplying sufficient manpower and capacity to easily accomplish the tasks included in the projected schedule.</strong></h4>
         </div>
       </div>
+      <div id="seemorestaff">
       <div class="row text-center">
         <div class="col-md-12 g-pad-bottom">
           <div class="col-md-3 col-sm-3 col-xs-6">
@@ -119,94 +135,101 @@
             </div>
           </div>
         </div>
-        <div class="row text-center">
-        <div class="col-md-12 g-pad-bottom">
-          <div class="col-md-3 col-sm-3 col-xs-6">
-            <div class="team-member">
-              <img alt="" src="assets/img/portrait_placeholder.png">
-              <h3><strong>JENNIFER STEPHAN</strong><br>
-              <br>
-              Senior Project Manager</h3>
+      </div>
+
+
+        <!-- BEGIN SLIDE -->
+        <div style="display:none;" id="slidemore">
+          <div class="row text-center">
+          <div class="col-md-12 g-pad-bottom">
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="team-member">
+                <img alt="" src="assets/img/portrait_placeholder.png">
+                <h3><strong>JENNIFER STEPHAN</strong><br>
+                <br>
+                Senior Project Manager</h3>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="team-member">
+                <img alt="" src="assets/img/portrait_placeholder.png">
+                <h3><strong>PATRICIA SHELBY</strong><br>
+                <br>
+                Architect/<br>Project Manager</h3></h3>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="team-member">
+                <img alt="" src="assets/img/portrait_placeholder.png">
+                <h3><strong>STEVE HESS</strong><br>
+                <br>
+                Drafter</h3>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="team-member">
+                <img alt="" src="assets/img/portrait_placeholder.png">
+                <h3><strong>ALEXANDER MURPHY </strong><br>
+                <br>
+                Field Technician/<br>Testing Specialist</h3>
+              </div>
             </div>
           </div>
-          <div class="col-md-3 col-sm-3 col-xs-6">
-            <div class="team-member">
-              <img alt="" src="assets/img/portrait_placeholder.png">
-              <h3><strong>PATRICIA SHELBY</strong><br>
-              <br>
-              Architect/<br>Project Manager</h3></h3>
+          <div class="row text-center">
+          <div class="col-md-12 g-pad-bottom">
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="team-member">
+                <img alt="" src="assets/img/portrait_placeholder.png">
+                <h3><strong>TROY HAUGEN</strong><br>
+                <br>
+                Construction Manager/<br>Field Technician</h3>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="team-member">
+                <img alt="" src="assets/img/portrait_placeholder.png">
+                <h3><strong>CHRIS PROCHAZKA </strong><br>
+                <br>
+                Senior Field Technician</h3></h3>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="team-member">
+                <img alt="" src="assets/img/portrait_placeholder.png">
+                <h3><strong>KEVIN AGLIAM</strong><br>
+                <br>
+                Associate Project Manager</h3>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="team-member">
+                <img alt="" src="assets/img/portrait_placeholder.png">
+                <h3><strong>JACQUELINE FORTEZZO</strong><br>
+                <br>
+                Field Investigator/<br>Drafter</h3>
+              </div>
             </div>
           </div>
-          <div class="col-md-3 col-sm-3 col-xs-6">
-            <div class="team-member">
-              <img alt="" src="assets/img/portrait_placeholder.png">
-              <h3><strong>STEVE HESS</strong><br>
-              <br>
-              Drafter</h3>
+           <div class="row text-center">
+          <div class="col-md-12 g-pad-bottom">
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="team-member">
+                <img alt="" src="assets/img/portrait_placeholder.png">
+                <h3><strong>ROLLIN WAKELY</strong><br>
+                <br>
+                Project Manager</h3>
+              </div>
             </div>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-6">
-            <div class="team-member">
-              <img alt="" src="assets/img/portrait_placeholder.png">
-              <h3><strong>ALEXANDER MURPHY </strong><br>
-              <br>
-              Field Technician/<br>Testing Specialist</h3>
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="team-member">
+                <img alt="" src="assets/img/portrait_placeholder.png">
+                <h3><strong>SHAWN MOSELEY</strong><br>
+                <br>
+              Project Manager</h3></h3>
+              </div>
             </div>
-          </div>
         </div>
-        <div class="row text-center">
-        <div class="col-md-12 g-pad-bottom">
-          <div class="col-md-3 col-sm-3 col-xs-6">
-            <div class="team-member">
-              <img alt="" src="assets/img/portrait_placeholder.png">
-              <h3><strong>TROY HAUGEN</strong><br>
-              <br>
-              Construction Manager/<br>Field Technician</h3>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-6">
-            <div class="team-member">
-              <img alt="" src="assets/img/portrait_placeholder.png">
-              <h3><strong>CHRIS PROCHAZKA </strong><br>
-              <br>
-              Senior Field Technician</h3></h3>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-6">
-            <div class="team-member">
-              <img alt="" src="assets/img/portrait_placeholder.png">
-              <h3><strong>KEVIN AGLIAM</strong><br>
-              <br>
-              Associate Project Manager</h3>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-6">
-            <div class="team-member">
-              <img alt="" src="assets/img/portrait_placeholder.png">
-              <h3><strong>JACQUELINE FORTEZZO</strong><br>
-              <br>
-              Field Investigator/<br>Drafter</h3>
-            </div>
-          </div>
-        </div>
-         <div class="row text-center">
-        <div class="col-md-12 g-pad-bottom">
-          <div class="col-md-3 col-sm-3 col-xs-6">
-            <div class="team-member">
-              <img alt="" src="assets/img/portrait_placeholder.png">
-              <h3><strong>ROLLIN WAKELY</strong><br>
-              <br>
-              Project Manager</h3>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-6">
-            <div class="team-member">
-              <img alt="" src="assets/img/portrait_placeholder.png">
-              <h3><strong>SHAWN MOSELEY</strong><br>
-              <br>
-            Project Manager</h3></h3>
-            </div>
-          </div>
+      <!-- /// -->
       </div>
     </div>
   </section>
