--- a/index.html
+++ b/index.html
@@ -84,7 +84,16 @@
       <div class="row text-center">
         <div class="col-md-8 col-md-offset-2">
           <h1>About Us</h1>
-          <h4><strong>As a firm, Trinity | ERD brings over 30 years of waterproofing expertise to confront the challenges with building envelope design in residential, commercial and mixed use facilities. Trinity | ERD was founded by Colin Murphy in 1986, and he remains the principal of this firm to this day. Our continued strength as a firm lies in our systematic approach to addressing the challenges with waterproofing designs using materials and innovation that will maintain a structure’s aesthetic elements and function while protecting the building from water intrusion. We strive to adapt to changes in the construction market by continuously evaluating new products and incorporating those products with proven, long-term performance into our design and specifications.</strong></h4>
+          <h4><strong>Founded in 1986 as Trinity Engineering, Inc., Colin Murphy wanted to form a company that would allow him to apply his wealth of experience providing solutions for analyzing, improving and developing the building envelope. 
+          
+          The name "Trinity" came from a group of companies then owned by Mr. Murphy that were all named after the Trinity River in northern California, where he fished while working in the state in the late 1970's. He describes it as an “almost religious” experience: "It was one of the most beautiful places I had ever fished,” says Mr. Murphy. “I had an old fiberglass fly rod that I still have today as a memory of the times."
+          
+          Through the years, the company expanded throughout the country, but the name, "Trinity Engineering" could not be used in all states. Looking for a name that described who we are, and the breadth of services we could provide, the name Exterior Research & Design (ERD) was born.
+ 
+          Since we have been in business for twenty years, many people still identify us as “Trinity,” especially the firms we worked with internationally. As we marked the twentieth anniversary of the firm in 2006, we combined our heritage with our present, to become Trinity | ERD.
+ 
+          Trinity | ERD not represents half a lifetime's work and a proud history. Today, the company includes over 40 staff members, a full-service testing facility, and clients from across North America, the Middle East, and Europe. We provide numerous services related to the building envelope and oversee a diverse set of building envelope projects throughout the world.
+ </strong></h4>
         </div>
       </div>
     </div>
@@ -240,7 +249,6 @@
       <div class="row text-center">
         <div class="col-md-8 col-md-offset-2">
           <h1>Our Services</h1>
-          <h4><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.</strong></h4>
         </div>
       </div>
       <div class="row text-center g-pad-bottom">
@@ -249,28 +257,31 @@
             <div class="service-div">
               <i class="fa fa-desktop fa-5x"></i>
               <h3>Analysis</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.</p>
+              <p>Accurate assessment of building envelope and waterproofing issues are essential to TKTKT and Trinity | ERD brings a wide array of diagnostic and reporting tools to projects requiring detailed forensic analysis. We have an extensive database of roofing data and research covering thirty years of waterproofing technology, which allows us to mine historical data on products, systems, weather and other information that could be critical to your building’s health, at a moment's notice.
+              </p>
             </div>
           </div>
           <div class="col-md-3">
             <div class="service-div">
               <i class="fa fa-flask fa-5x"></i>
               <h3>Design</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.</p>
+              <p>Our engineers and architects work together to create a system that performs best based on local weather, building conditions and the overall purpose of the structure. We base design decisions on broad product knowledge, an extensive library of product and historical data, and sound design and engineering principles.
+              </p>
             </div>
           </div>
           <div class="col-md-3">
             <div class="service-div">
               <i class="fa fa-check fa-5x"></i>
               <h3>Litigation Support</h3>
-              <p>Building envelope and construction problems sometimes need to be resolved through litigation or arbitration. When that happens, you need to be armed with information presented in a way that makes as much sense to attorneys as it does to engineers.</p>
+              <p>Building envelope and construction problems sometimes need to be resolved through litigation or arbitration. When that happens, you need to be armed with information presented in a way that makes as much sense to attorneys as it does to engineers.
+              </p>
             </div>
           </div>
           <div class="col-md-3">
             <div class="service-div">
               <i class="fa fa-cog fa-5x"></i>
               <h3>Contract Administration</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.</p>
+              <p>Trinity | ERD supervises roofing and waterproofing installations on structures around the world. From the initial request for a bid to its installation, we can help you make sure that your project is executed well and according to industry standards.
             </div>
           </div>
         </div>
@@ -282,25 +293,25 @@
     <div class="container">
       <div class="row text-center">
         <div class="col-md-8 col-md-offset-2">
-          <h1>Say Hello.</h1>
-          <h4><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.</strong></h4>
+          <h1>Contact Us</h1>
+          <h4><strong>For all new business inquiries and requests please fill out the form below.</strong></h4>
         </div>
       </div>
       <div class="row">
         <div class="col-md-5 contact-cls">
-          <h3>Contact Us</h3>
+          <h3>Inquiries</h3>
           <div>
             <span><i class="fa fa-home"></i> Address: 80 Yesler Way #200 <br/>&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;Seattle, WA 98104</span><br>
             <span><i class="fa fa-phone"></i> Phone:206.467.0054</span><br>
-            <span><i class="fa fa-envelope-o"></i>E-Mail: hello@trinityerd.com</span><br>
+            <span><i class="fa fa-envelope-o"></i>E-Mail: info@trinityerd.com</span><br>
           </div><br>
           <div id="social-icon">
             <a href="#"><i class="fa fa-facebook fa-2x"></i></a> <a href="#"><i class="fa fa-twitter fa-2x"></i></a> <a href="#"><i class="fa fa-linkedin fa-2x"></i></a> <a href="#"><i class="fa fa-instagram fa-2x"></i></a>
           </div>
         </div>
         <div class="col-md-7">
-          <h2>Lorem ipsum dolor sit amet</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec nisl odio. Mauris vehicula at nunc id posuere. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.</p>
+          <h2>For all new business inquiries and requests please fill out the form below.</h2>
+          <p>Someone will respond within 2-3 business days.</p>
           <form>
             <div class="row">
               <div class="col-md-6 col-sm-6">
@@ -329,27 +340,28 @@
       </div>
     </div>
   </section><!--End Contact Section -->
-  <!--footer Section -->
+
+<!--Footer Section -->
   <div class="for-full-back" id="footer">
     <div id="footer-sidebar-one">
       <span style="font-weight:bold;">Seattle Headquarters</span><br>
       80 Yesler Way, Suite 200<br>
       Seattle, Washington 98104<br>
-      Phone:206.467.0054
+      Phone: 206.467.0054
     </div>
-    <div id="footer-sidebar-three">
+     <div id="footer-sidebar-two">
       <span style="font-weight:bold;">Honolulu Office</span><br>
       735 Bishop Street, Suite 430<br>
       Honolulu, HI 96813<br>
       Phone: 808.535.3144
     </div>
-    <div id="footer-sidebar-two">
+    <div id="footer-sidebar-three">
       <span style="font-weight:bold;">Connecticut Office</span><br>
       353 Christian Street, Unit 13<br>
       Oxford, Connecticut 06478<br>
       Phone: 203.262.9245
     </div>
-    <div id="footer-sidebar-three">
+    <div id="footer-sidebar-four">
       <span style="font-weight:bold;">South Carolina Lab</span><br>
       10 Mauney Court<br>
       Columbia, SC 29201<br>
@@ -359,9 +371,10 @@
       © 
       <script type="text/javascript">
       document.write(new Date().getFullYear());
-      </script> www.trintiyerd.com | All Right Reserved
+      </script> www.trinityerd.com | All Right Reserved
     </div>
-  </div><!--End footer Section -->
+  </div>
+  <!--End Footer Section -->
   <!-- JAVASCRIPT FILES PLACED AT THE BOTTOM TO REDUCE THE LOADING TIME  -->
   <!-- CORE JQUERY  -->
   <script src="assets/plugins/jquery-1.10.2.js">
