--- a/profile/colin_murphy.html
+++ b/profile/colin_murphy.html
@@ -15,8 +15,6 @@
   <title>TrinityERD</title><!--REQUIRED STYLE SHEETS-->
   <!-- BOOTSTRAP CORE STYLE CSS -->
   <link href="/../assets/css/bootstrap.css" rel="stylesheet"><!-- FONTAWESOME STYLE CSS -->
-  <link href="/../assets/css/font-awesome.min.css" rel="stylesheet"><!-- VEGAS STYLE CSS -->
-  <link href="/../assets/scripts/vegas/jquery.vegas.min.css" rel="stylesheet"><!-- CUSTOM STYLE CSS -->
   <link href="/../assets/css/style.css" rel="stylesheet"><!-- GOOGLE FONT -->
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'><!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
@@ -25,7 +23,20 @@
     <![endif]  <link href="./stylesheet.css" rel="stylesheet" type="text/css">
  
     -->
+     <script src="/../assets/plugins/jquery-1.10.2.js">
+  </script> <!-- BOOTSTRAP CORE SCRIPT   -->
+<script type="text/javascript">
+function supportsImports() {
+  return 'import' in document.createElement('link');
+}
 
+if (supportsImports()) {
+  //alert('supports imports');
+} else {
+  //alert('does not support imports');
+}
+</script>
+<link rel="import" href="/profile/people.html">
 </head>
 <body>
 <!-- Navigation -->
@@ -55,205 +66,101 @@
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container -->
   </nav><!--End Navigation -->
-<!--Profile Section-->
+  <!--Profile Section-->
   <section class="for-full-back color-white" id="about">
     <div class="container">
       <div class="row text-center">
         <div  class="col-md-1">
-         <!-- 
-         <h1 style="color:#108445;">Colin Murphy, RRC. FRCI, LEED AP BD+C, PRA</h1>
-          <h2>Principal</h2>
-          <h4><strong>Colin is the principal of Trinity | ERD, which he founded in 1986. A Registered Roof Consultant with
-          degrees in Mechanical Engineering and Law (Scotland), he has authored and presented numerous
-          papers on roofing and building envelope subjects throughout the United States and Canada. His work
-          includes forensic analysis of building envelopes, design of building envelope systems, and envelope
-          component and system testing. Colin’s certifications include LEED Accredited Professional status
-          from the U.S. Green Building Council, certifications as both a Residential and Commercial Building
-          Inspector from the International Code Council and certification as a Professional Reserve Analyst
-          through the Association of Professional Reserve Analysts. Colin is the co-author of “The Roof
-          Construction Guide for General Contractors”. He also holds fourteen United States and European
-          patents for roofing and building envelope components and systems. Colin leads a strong team of
-          designers, investigators, project managers, laboratory technicians, field observers, architects and
-          engineers, all of whom focus on the exterior envelope of both commercial and residential buildings.</strong></h4>
-          -->
           <div class="content_container">
-    <div class="content">
-      <div class="content_left content_nine">
-        <!-- Profile Post -->
-        <div class="bio_text">
-          <img alt="Colin Murphy" class="image_left" height="275" src="../assets/img/colin_murphy.jpg" width="275">
-          <h1 style="color:#108445;">Colin Murphy, RRC. FRCI, LEED AP BD+C, PRA</h1>
-          <div class="bio_position">
-            <p style="font-weight: bold; padding-bottom:8px !important; line-height:16px !important;">Principal</p>
-            <p style="padding-bottom:8px !important;  line-height:16px !important;">LEED Accredited Professional in Seattle, Connecticut, &amp; Honolulu</p>
-            <p style="padding-bottom:8px !important;  line-height:16px !important;">Bachelor of Snorkeling, Underwater Basket Weaving, Cum Laude –&nbsp;Hawai'i Pacific University</p>
-          </div>
-        </div>
-        <div class="bio_content">
-          <h4><strong>
-          <p>Colin is the principal of Trinity | ERD, which he founded in 1986. A Registered Roof Consultant with
-          degrees in Mechanical Engineering and Law (Scotland), he has authored and presented numerous
-          papers on roofing and building envelope subjects throughout the United States and Canada. His work
-          includes forensic analysis of building envelopes, design of building envelope systems, and envelope
-          component and system testing. </p>
-          <p>Colin’s certifications include LEED Accredited Professional status
-          from the U.S. Green Building Council, certifications as both a Residential and Commercial Building
-          Inspector from the International Code Council and certification as a Professional Reserve Analyst
-          through the Association of Professional Reserve Analysts. Colin is the co-author of “The Roof
-          Construction Guide for General Contractors”. </p>
-          <p>He also holds fourteen United States and European
-          patents for roofing and building envelope components and systems. Colin leads a strong team of
-          designers, investigators, project managers, laboratory technicians, field observers, architects and
-          engineers, all of whom focus on the exterior envelope of both commercial and residential buildings.</p>
-          </strong></h4>
-        </div><!-- Profile Post -->
-        <div class="bio_link">
-          <a href="../index.html">« Back</a>
-        </div>
-      </div>
-      <div class="content_right content_three">
-        <!-- People Menu -->
-        <script>
-        function switch_menu(title_id, menu_id) {
-        var title = document.getElementById(title_id);
-        if(title.className == 'service_sidebar_title_closed') {
-            title.className = 'service_sidebar_title_open';
-            } else {
-            title.className = 'service_sidebar_title_closed';
-        }
-        var menu = document.getElementById(menu_id);
-        if(menu.style.display == 'block') {
-            menu.style.display = 'none';
-            } else {
-            menu.style.display = 'block';
-        }
-        }
+            <div class="content">
+              <div class="content_left content_nine">
+                <!-- Profile Post -->
+                <div class="bio_text">
+                  <img alt="Colin Murphy" class="image_left" height="275" src="../assets/img/colin_murphy.jpg" width="275">
+                  <h1 style="color:#108445;">Colin Murphy, RRC. FRCI, LEED AP BD+C, PRA</h1>
+                  <div class="bio_position">
+                    <p style="font-weight: bold; padding-bottom:8px !important; line-height:16px !important;">Principal</p>
+                    <p style="padding-bottom:8px !important;  line-height:16px !important;">LEED Accredited Professional</p>
+                  </div>
+                </div>
+                <div class="bio_content">
+                  <p><strong>
+                  Colin is the founder and principal of Trinity | ERD. A Registered Roof Consultant with degrees in Mechanical Engineering and Law (Scotland), he has authored and presented numerous papers on roofing and building envelope subjects throughout the United States and Canada. His work includes forensic analysis of building envelopes, design of building envelope systems, and envelope component and system testing. Colin’s certifications include LEED Accredited Professional status from the U.S. Green Building Council, certifications as both a Residential and Commercial Building Inspector from the International Code Council and certification as a Professional Reserve Analyst through the Association of Professional Reserve Analysts. Colin is the co-author of The Roof Construction Guide for General Contractors. He also holds fourteen American and European patents for roofing and building envelope components and systems. Colin leads a strong team of designers, investigators, project managers, laboratory technicians, field observers, architects and engineers, all of whom focus on the exterior envelope of both commercial and residential buildings.
+                  </strong></p>
+                </div><!-- Profile Post -->
+                <div class="bio_link">
+                  <a href="../index.html">« Back</a>
+                </div>
+              </div>
+              <div class="content_right content_three" id="people_menu">
+                <!-- People Menu -->
+                <script>
+                function switch_menu(title_id, menu_id) {
+                var title = document.getElementById(title_id);
+                if(title.className == 'service_sidebar_title_closed') {
+                    title.className = 'service_sidebar_title_open';
+                    } else {
+                    title.className = 'service_sidebar_title_closed';
+                }
+                var menu = document.getElementById(menu_id);
+                if(menu.style.display == 'block') {
+                    menu.style.display = 'none';
+                    } else {
+                    menu.style.display = 'block';
+                }
+                }
 
-        </script>
-        <div class="service_sidebar_title_closed" id="title0" onclick="switch_menu(&#39;title0&#39;,&#39;menu0&#39;)">
-          Seattle
-        </div>
-        <div class="service_sidebar_menu" id="menu0" style="display:none;">
-          <ul>
-            <li>
-              <a href="/profile/aimee_st_cyr.html">Aimee St. Cyr</a>
-            </li>
-            <li>
-              <a href="/profile/alexander_murphy.html">Alexander Murphy</a>
-            </li>
-            <li>
-              <a href="/profile/austin_bowers.html">Austin Bowers</a>
-            </li>
-            <li>
-              <a href="/profile/chris_prochazka.html">Chris Prochazka</a>
-            </li>
-            <li><span class="service_menu_linko">Colin Murphy</span></li> 
-            
-            <li>
-              <a href="/profile/darbi_krumpos.html">Darbi Krumpos</a>
-            </li>
-            <li>
-              <a href="/profile/deonte_randoplh.html">Deonte Randolph</a>
-            </li>
-            <li>
-              <a href="/profile/ellen_tackett.html">Ellen Tackett</a>
-            </li>
-            <li>
-              <a href="/profile/gene_apostol.html">Gene Apostol</a>
-            </li>
-            <li>
-              <a href="/profile/jennifer_stephan.html">Jennifer Stephan</a>
-            </li>
-            <li>
-              <a href="/profile/john_michael_crotty.html">John Michael Crotty</a>
-            </li>
-            <li>
-              <a href="/profile/norah_willet.html">Norah Willett</a>
-            </li>
-            <li>
-              <a href="/profile/patricia_shelby.html">Patricia Shelby</a>
-            </li>
-            <li>
-              <a href="/profile/steve_hess.html">Steve Hess</a>
-            </li>
-            <li>
-              <a href="/profile/tiffany_gould.html">Tiffany Gould</a>
-            </li>
-          </ul>
-        </div>
-        <div class="service_sidebar_title_closed" id="title1" onclick="switch_menu(&#39;title1&#39;,&#39;menu1&#39;)">
-          Honolulu
-        </div>
-        <div class="service_sidebar_menu" id="menu1" style="display:none;">
-          <ul>
-            <li>
-              <a href="/profile/kevin_agliam.html">Kevin Agliam</a>
-            </li>
-            <li>
-              <a href="/profile/jacqueline_fortezzo.html">Jacqueline Fortezzo</a>
-            </li>
-            <li>
-              <a href="/profile/moana_cummings.html">Moana Cummings</a>
-            </li>
-            <li>
-              <a href="/profile/rollin_wakley.html">Rollin Wakely</a>
-            </li>
-            <li>
-              <a href="/profile/shawn_moseley.html">Shawn Moseley</a>
-            </li>
-          </ul>
-        </div>
-        <div class="service_sidebar_title_closed" id="title2" onclick="switch_menu(&#39;title2&#39;,&#39;menu2&#39;)">
-          Connecticut
-        </div>
-        <div class="service_sidebar_menu" id="menu2" style="display:none;">
-          <ul>
-            <li>
-              <a href="/profile/robert_nieminen.html">Robert Nieminen</a>
-            </li>
-          </ul>
-        </div>
-        <div class="service_sidebar_title_closed" id="title3" onclick="switch_menu(&#39;title3&#39;,&#39;menu3&#39;)">
-          South Carolina
-        </div>
-        <div class="service_sidebar_menu" id="menu3" style="display:none;">
-          <ul>
-            <li>
-              <a href="/profile/alex_holtz.html">Alex Holtzkamp</a>
-            </li>
-          </ul>
-        </div>
-          </ul>
-        </div><!-- People Menu -->
-      </div>
-    </div>
-  </div><!-- Social -->
-        </div>
+                </script>
+
+                <div id="container"></div>
+                <script type="text/javascript">
+                  var link = document.querySelector('link[rel="import"]'); // get our HTML5 import
+                  var template = link.import.querySelector('template'); // store the <template> value in template
+                  var clone = document.importNode(template.content, true); // create a copy of it to append to the current page
+
+                  var whoami = $('.bio_text img').attr("alt"); // get current profile name
+
+                  var founditems = clone.querySelectorAll('div.service_sidebar_menu a'); // find all <a> tags in people.html
+                  for (var i = 0; i < founditems.length; i++) { // iterate over them
+                    if (whoami == founditems[i].innerHTML) { // find only the <a> tag that == the current profile name 
+                      var linko = document.createElement('span'); // create the linko span 
+                      linko.className += "service_menu_linko";
+                      linko.innerHTML = founditems[i].innerHTML; // fill it with the current person's name
+                      founditems[i].parentNode.replaceChild(linko,founditems[i]); // replace the <a> with the <span>
+                      
+                    }
+                  }
+                  document.querySelector('#container').appendChild(clone); // insert sidebar on page
+                </script>
+              </div><!-- People Menu -->
+            </div>
+          </div>
+        </div><!-- Social -->
       </div>
     </div>
   </section>
-<!--End Profile Section-->
-<!--Footer Section -->
+  <!--End Profile Section-->
+  <!--Footer Section -->
   <div class="for-full-back" id="footer">
     <div id="footer-sidebar-one">
       <span style="font-weight:bold;">Seattle Headquarters</span><br>
       80 Yesler Way, Suite 200<br>
       Seattle, Washington 98104<br>
-      Phone:206.467.0054
+      Phone: 206.467.0054
     </div>
-     <div id="footer-sidebar-three">
+     <div id="footer-sidebar-two">
       <span style="font-weight:bold;">Honolulu Office</span><br>
       735 Bishop Street, Suite 430<br>
       Honolulu, HI 96813<br>
       Phone: 808.535.3144
     </div>
-    <div id="footer-sidebar-two">
+    <div id="footer-sidebar-three">
       <span style="font-weight:bold;">Connecticut Office</span><br>
       353 Christian Street, Unit 13<br>
       Oxford, Connecticut 06478<br>
       Phone: 203.262.9245
     </div>
-    <div id="footer-sidebar-three">
+    <div id="footer-sidebar-four">
       <span style="font-weight:bold;">South Carolina Lab</span><br>
       10 Mauney Court<br>
       Columbia, SC 29201<br>
@@ -263,22 +170,12 @@
       © 
       <script type="text/javascript">
       document.write(new Date().getFullYear());
-      </script> www.trintiyerd.com | All Right Reserved
+      </script> www.trinityerd.com | All Right Reserved
     </div>
   </div>
   <!--End Footer Section -->
   <!-- JAVASCRIPT FILES PLACED AT THE BOTTOM TO REDUCE THE LOADING TIME  -->
   <!-- CORE JQUERY  -->
-  <script src="/../assets/plugins/jquery-1.10.2.js">
-  </script> <!-- BOOTSTRAP CORE SCRIPT   -->
-   
-  <script src="/../assets/plugins/bootstrap.js">
-  </script> <!-- VEGAS SLIDESHOW SCRIPTS -->
-   
-  <script src="/../assets/plugins/vegas/jquery.vegas.min.js">
-  </script> <!-- CUSTOM SCRIPTS -->
-   
-  <script src="/../assets/js/custom.js">
-  </script>
+ 
 </body>
 </html>
