profiles and history

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
           <li>
             <a href="#team">TEAM</a>
           </li>
+           <li>
+            <a href="history.html">HISTORY</a>
+          </li>
           <li>
             <a href="#services">SERVICES</a>
           </li>
@@ -84,16 +87,8 @@
       <div class="row text-center">
         <div class="col-md-8 col-md-offset-2">
           <h1>About Us</h1>
-          <h4><strong>Founded in 1986 as Trinity Engineering, Inc., Colin Murphy wanted to form a company that would allow him to apply his wealth of experience providing solutions for analyzing, improving and developing the building envelope. 
-          
-          The name "Trinity" came from a group of companies then owned by Mr. Murphy that were all named after the Trinity River in northern California, where he fished while working in the state in the late 1970's. He describes it as an “almost religious” experience: "It was one of the most beautiful places I had ever fished,” says Mr. Murphy. “I had an old fiberglass fly rod that I still have today as a memory of the times."
-          
-          Through the years, the company expanded throughout the country, but the name, "Trinity Engineering" could not be used in all states. Looking for a name that described who we are, and the breadth of services we could provide, the name Exterior Research & Design (ERD) was born.
- 
-          Since we have been in business for twenty years, many people still identify us as “Trinity,” especially the firms we worked with internationally. As we marked the twentieth anniversary of the firm in 2006, we combined our heritage with our present, to become Trinity | ERD.
- 
-          Trinity | ERD not represents half a lifetime's work and a proud history. Today, the company includes over 40 staff members, a full-service testing facility, and clients from across North America, the Middle East, and Europe. We provide numerous services related to the building envelope and oversee a diverse set of building envelope projects throughout the world.
- </strong></h4>
+          <h4><strong>Trinity | ERD is headquartered in Seattle, Washington, where the majority of our architects, engineers, project managers and administrative support staff are housed. Additionally, our office in Oxford, Connecticut provides consulting services for code evaluations or insurance certifications, design of cladding elements and systems for wind load resistance, field investigations and field testing, and consulting and coordination services for FM approval or UL classification. Trinity | ERD’s laboratory is in Columbia, South Carolina with a satellite laboratory located in Seattle. Our accredited laboratory can perform scores of different tests to be sure materials meet code expectations, windows do not fail before their rating, your roof meets warranty standards, and many other aspects of building envelope science. Our most recent expansion was in 2010 with the addition of an office in Honolulu, Hawaii to better serve our clients around the Pacific. Trinity | ERD continually administers projects located throughout the country and worldwide. And where possible, Trinity | ERD will combine trips for clients to share in travel expenses. Project meetings and site observations can be coordinated with the other local projects to reduce expenses and conserve project resources.
+          </strong></h4>
         </div>
       </div>
     </div>
@@ -120,28 +115,28 @@
             </div></a>
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6">
-            <div class="team-member">
+            <a href="/profile/darbi_krumpos.html"><div class="team-member">
               <img alt="" src="assets/img/darbi_krumpos.jpg">
               <h3><strong>DARBI KRUMPOS</strong><br>
               <br>
               Vice President</h3>
-            </div>
+            </div></a>
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6">
-            <div class="team-member">
+            <a href="/profile/robert_nieminen.html"><div class="team-member">
               <img alt="" src="assets/img/portrait_placeholder.png">
-              <h3><strong>AIMEE ST. CYR</strong><br>
+              <h3><strong>ROBERT NIEMINEN</strong><br>
               <br>
-              Architect</h3>
-            </div>
+              Vice President</h3>
+            </div></a>
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6">
-            <div class="team-member">
+            <a href="/profile/alex_holtkamp.html"><div class="team-member">
               <img alt="" src="assets/img/portrait_placeholder.png">
-              <h3><strong>PETER AIELLO</strong><br>
+              <h3><strong>ALEX HOLTKAMP</strong><br>
               <br>
-              Architect/Manager</h3>
-            </div>
+              Senior Test Tech</h3>
+            </div></a>
           </div>
         </div>
       </div>
@@ -152,90 +147,90 @@
           <div class="row text-center">
           <div class="col-md-12 g-pad-bottom">
             <div class="col-md-3 col-sm-3 col-xs-6">
-              <div class="team-member">
+              <a href="/profile/jennifer_stephan.html"><div class="team-member">
                 <img alt="" src="assets/img/portrait_placeholder.png">
                 <h3><strong>JENNIFER STEPHAN</strong><br>
                 <br>
                 Senior Project Manager</h3>
-              </div>
+              </div></a>
             </div>
             <div class="col-md-3 col-sm-3 col-xs-6">
-              <div class="team-member">
+              <a href="/profile/patricia_shelby.html"><div class="team-member">
                 <img alt="" src="assets/img/portrait_placeholder.png">
                 <h3><strong>PATRICIA SHELBY</strong><br>
                 <br>
                 Architect/<br>Project Manager</h3></h3>
-              </div>
+              </div></a>
             </div>
             <div class="col-md-3 col-sm-3 col-xs-6">
-              <div class="team-member">
+              <a href="/profile/steve_hess.html"><div class="team-member">
                 <img alt="" src="assets/img/portrait_placeholder.png">
                 <h3><strong>STEVE HESS</strong><br>
                 <br>
                 Drafter</h3>
-              </div>
+              </div></a>
             </div>
             <div class="col-md-3 col-sm-3 col-xs-6">
-              <div class="team-member">
+              <a href="/profile/alexander_murphy.html"><div class="team-member">
                 <img alt="" src="assets/img/portrait_placeholder.png">
                 <h3><strong>ALEXANDER MURPHY </strong><br>
                 <br>
                 Field Technician/<br>Testing Specialist</h3>
-              </div>
+              </div></a>
             </div>
           </div>
           <div class="row text-center">
           <div class="col-md-12 g-pad-bottom">
             <div class="col-md-3 col-sm-3 col-xs-6">
-              <div class="team-member">
+              <a href="/profile/troy_haugen.html"><div class="team-member">
                 <img alt="" src="assets/img/portrait_placeholder.png">
                 <h3><strong>TROY HAUGEN</strong><br>
                 <br>
                 Construction Manager/<br>Field Technician</h3>
-              </div>
+              </div></a>
             </div>
             <div class="col-md-3 col-sm-3 col-xs-6">
-              <div class="team-member">
+              <a href="/profile/chris_prochazka.html"><div class="team-member">
                 <img alt="" src="assets/img/portrait_placeholder.png">
                 <h3><strong>CHRIS PROCHAZKA </strong><br>
                 <br>
                 Senior Field Technician</h3></h3>
-              </div>
+              </div></a>
             </div>
             <div class="col-md-3 col-sm-3 col-xs-6">
-              <div class="team-member">
+              <a href="/profile/kevin_agliam.html"><div class="team-member">
                 <img alt="" src="assets/img/portrait_placeholder.png">
                 <h3><strong>KEVIN AGLIAM</strong><br>
                 <br>
                 Associate Project Manager</h3>
-              </div>
+              </div></a>
             </div>
             <div class="col-md-3 col-sm-3 col-xs-6">
-              <div class="team-member">
+              <a href="/profile/jacqueline_fortezzo.html"><div class="team-member">
                 <img alt="" src="assets/img/portrait_placeholder.png">
                 <h3><strong>JACQUELINE FORTEZZO</strong><br>
                 <br>
                 Field Investigator/<br>Drafter</h3>
-              </div>
+              </div></a>
             </div>
           </div>
            <div class="row text-center">
           <div class="col-md-12 g-pad-bottom">
             <div class="col-md-3 col-sm-3 col-xs-6">
-              <div class="team-member">
+              <a href="/profile/rollin_wakely.html"><div class="team-member">
                 <img alt="" src="assets/img/portrait_placeholder.png">
                 <h3><strong>ROLLIN WAKELY</strong><br>
                 <br>
                 Project Manager</h3>
-              </div>
+              </div></a>
             </div>
             <div class="col-md-3 col-sm-3 col-xs-6">
-              <div class="team-member">
+              <a href="/profile/shawn_moseley.html"><div class="team-member">
                 <img alt="" src="assets/img/portrait_placeholder.png">
                 <h3><strong>SHAWN MOSELEY</strong><br>
                 <br>
               Project Manager</h3></h3>
-              </div>
+              </div></a>
             </div>
         </div>
       <!-- /// -->
@@ -257,31 +252,28 @@
             <div class="service-div">
               <i class="fa fa-desktop fa-5x"></i>
               <h3>Analysis</h3>
-              <p>Accurate assessment of building envelope and waterproofing issues are essential to TKTKT and Trinity | ERD brings a wide array of diagnostic and reporting tools to projects requiring detailed forensic analysis. We have an extensive database of roofing data and research covering thirty years of waterproofing technology, which allows us to mine historical data on products, systems, weather and other information that could be critical to your building’s health, at a moment's notice.
-              </p>
+              <p>We bring a wide array of diagnostic and reporting tools to projects requiring detailed forensic analysis. We have an extensive database of roofing data and research covering thirty years of waterproofing technology, which allows us to mine historical data on products, systems, weather and other information that could be critical to your building’s health, at a moments notice.</p>
             </div>
           </div>
           <div class="col-md-3">
             <div class="service-div">
               <i class="fa fa-flask fa-5x"></i>
               <h3>Design</h3>
-              <p>Our engineers and architects work together to create a system that performs best based on local weather, building conditions and the overall purpose of the structure. We base design decisions on broad product knowledge, an extensive library of product and historical data, and sound design and engineering principles.
-              </p>
+              <p>At the heart of a watertight, long-lived building envelope lies good design.Our engineers and architects work together to create a system that performs best based on local weather, building conditions and the overall purpose of the structure. We base design decisions on broad product knowledge, an extensive library of product and historical data, and sound design and engineering principles.</p>
             </div>
           </div>
           <div class="col-md-3">
             <div class="service-div">
               <i class="fa fa-check fa-5x"></i>
               <h3>Litigation Support</h3>
-              <p>Building envelope and construction problems sometimes need to be resolved through litigation or arbitration. When that happens, you need to be armed with information presented in a way that makes as much sense to attorneys as it does to engineers.
-              </p>
+              <p>Building envelope and construction problems sometimes need to be resolved through litigation or arbitration. When that happens, you need to be armed with information presented in a way that makes as much sense to attorneys as it does to engineers. Our goals in any dispute are clarity and accuracy, which allows your advocates to work toward a resolution backed by solid, well-presented information.</p>
             </div>
           </div>
           <div class="col-md-3">
             <div class="service-div">
               <i class="fa fa-cog fa-5x"></i>
               <h3>Contract Administration</h3>
-              <p>Trinity | ERD supervises roofing and waterproofing installations on structures around the world. From the initial request for a bid to its installation, we can help you make sure that your project is executed well and according to industry standards.
+              <p>From the initial request for a bid to its installation, we can help you make sure that your project is executed according to industry standards. We literally wrote the book on contract support. Colin Murphy's Roofing for General Contractors is a complete guide to successful specification, bid and installation.</p>
             </div>
           </div>
         </div>
