--- a/profile/troy_haugen.html
+++ b/profile/troy_haugen.html
@@ -76,16 +76,16 @@ if (supportsImports()) {
               <div class="content_left content_nine">
                 <!-- Profile Post -->
                 <div class="bio_text">
-                  <img alt="Colin Murphy" class="image_left" height="275" src="../assets/img/colin_murphy.jpg" width="275">
-                  <h1 style="color:#108445;">Colin Murphy, RRC. FRCI, LEED AP BD+C, PRA</h1>
+                  <img alt="Troy Haugen" class="image_left" height="275" src="../assets/img/portrait_placeholder.png" width="275">
+                  <h1 style="color:#108445;">Troy Haugen</h1>
                   <div class="bio_position">
-                    <p style="font-weight: bold; padding-bottom:8px !important; line-height:16px !important;">Principal</p>
-                    <p style="padding-bottom:8px !important;  line-height:16px !important;">LEED Accredited Professional</p>
+                    <p style="font-weight: bold; padding-bottom:8px !important; line-height:16px !important;">Construction Manager and Field Technician</p>
+                    <p style="padding-bottom:8px !important;  line-height:16px !important;"></p>
                   </div>
                 </div>
                 <div class="bio_content">
                   <p><strong>
-                  Colin is the founder and principal of Trinity | ERD. A Registered Roof Consultant with degrees in Mechanical Engineering and Law (Scotland), he has authored and presented numerous papers on roofing and building envelope subjects throughout the United States and Canada. His work includes forensic analysis of building envelopes, design of building envelope systems, and envelope component and system testing. Colin’s certifications include LEED Accredited Professional status from the U.S. Green Building Council, certifications as both a Residential and Commercial Building Inspector from the International Code Council and certification as a Professional Reserve Analyst through the Association of Professional Reserve Analysts. Colin is the co-author of The Roof Construction Guide for General Contractors. He also holds fourteen American and European patents for roofing and building envelope components and systems. Colin leads a strong team of designers, investigators, project managers, laboratory technicians, field observers, architects and engineers, all of whom focus on the exterior envelope of both commercial and residential buildings.
+                  Troy comes to Trinity | ERD with nearly twenty years experience in construction and project management, as well as an acute knowledge of the Masonry services. Troy’s previous experience has taken him to international projects far from his native Washington roots. He was fortunate enough to work a project in the Marshall Islands managing the masonry department at a test site on Kwajalein Island. Troy is SIKA and BASF trained and holds many construction and safety certifications.
                   </strong></p>
                 </div><!-- Profile Post -->
                 <div class="bio_link">
