--- a/profile/people.html
+++ b/profile/people.html
@@ -49,6 +49,9 @@
                     <li>
                       <a href="/profile/tiffany_gould.html">Tiffany Gould</a>
                     </li>
+                    <li>
+                      <a href="/profile/troy_haugen.html">Troy Haugen</a>
+                    </li>
                   </ul>
                 </div>
                 <div class="service_sidebar_title_closed" id="title1" onclick="switch_menu(&#39;title1&#39;,&#39;menu1&#39;)">
@@ -56,11 +59,11 @@
                 </div>
                 <div class="service_sidebar_menu" id="menu1" style="display:none;">
                   <ul>
-                    <li>
-                      <a href="/profile/kevin_agliam.html">Kevin Agliam</a>
+                   <li>
+                      <a href="/profile/jacqueline_fortezzo.html">Jacqueline Fortezzo</a>
                     </li>
                     <li>
-                      <a href="/profile/jacqueline_fortezzo.html">Jacqueline Fortezzo</a>
+                      <a href="/profile/kevin_agliam.html">Kevin Agliam</a>
                     </li>
                     <li>
                       <a href="/profile/moana_cummings.html">Moana Cummings</a>
